--- a/dashboard.html
+++ b/dashboard.html
@@ -150,7 +150,7 @@
         <div class="modal__content">
             <div class="modal__header">
                 <h2 class="modal__title" id="modal-title">Add New Employee</h2>
-                <button class="btn btn--icon" id="close-modal-btn">❌</button>
+                <button class="btn btn--icon" id="close-modal-btn" type="button">❌</button>
             </div>
             <form class="employee-form" id="employee-form">
                 <div class="form-row">
